--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,7 @@
-#
-# This file contains configuration flags to customize your site
-#
-
-# Name of your site (displayed in the header)
-name: Your Name
-
-# Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
-
+name: Feedback Loop
+description: Wlad's personal web blog
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: http://www.gravatar.com/avatar/c6ee78a8be20668ad98ace891baf5ade?d=identicon
 
 #
 # Flags below are optional
