--- a/_config.yml
+++ b/_config.yml
@@ -1,44 +1,25 @@
 name: Feedback Loop
 description: Wlad's personal web blog
-# URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: http://www.gravatar.com/avatar/c6ee78a8be20668ad98ace891baf5ade?d=identicon
-
-#
-# Flags below are optional
-#
-
-# Includes an icon in the footer for each username you enter
 footer-links:
-  dribbble:
-  email:
-  facebook:
-  flickr:
-  github: barryclark/jekyll-now
-  instagram:
-  linkedin:
-  pinterest:
-  rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus: # anything in your profile username that comes after plus.google.com/
+  email: wladston@wladston.net
+  facebook: wladston
+  github: wladston
+  instagram: coderwlad
+  linkedin: wladston
+  pinterest: wladston
+  rss: rss
+  twitter: wladston
+  stackoverflow: users/518036/wladston
+  youtube: user/wladston
+  googleplus: +WladstonViana
 
+disqus: wladston
 
-# Enter your Disqus shortname (not your username) to enable commenting on posts
-# You can find your shortname on the Settings page of your Disqus account
-disqus:
+google_analytics: UA-73145429-1
 
-# Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
+url: http://blog.wladston.net
 
-# Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
-# Used for Sitemap.xml and your RSS feed
-url:
-
-# If you're hosting your site at a Project repository on GitHub pages
-# (http://yourusername.github.io/repository-name)
-# and NOT your User repository (http://yourusername.github.io)
-# then add in the baseurl here, like this: "/repository-name"
 baseurl: ""
 
 #
